--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.14.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
