--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^18.2.8",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.5",
