--- a/angular.json
+++ b/angular.json
@@ -10,6 +10,13 @@
           "style": "scss"
         }
       },
+      "i18n": {
+        "sourceLocale": "en",
+        "locales": {
+          "fr": "src/locale/messages.fr.xlf"
+        }
+      },
+
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -20,10 +27,7 @@
             "outputPath": "dist/vcg-website",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js",
-              "@angular/localize/init"
-            ],
+            "polyfills": ["zone.js", "@angular/localize/init"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -37,6 +41,7 @@
               "node_modules/tailwindcss/tailwind.css"
             ],
             "scripts": [],
+            "localize": true,
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
@@ -63,6 +68,14 @@
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
+            },
+            "fr": {
+              "localize": ["fr"],
+              "outputPath": "dist/vcg-website-fr"
+            },
+            "en": {
+              "localize": ["en"],
+              "outputPath": "dist/vcg-website-en"
             }
           },
           "defaultConfiguration": "production"
@@ -80,7 +93,10 @@
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n"
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "outputPath": "src/locale"
+          }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
@@ -98,9 +114,7 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.scss"
-            ],
+            "styles": ["src/styles.scss"],
             "scripts": []
           }
         }
