--- a/papers/bilan-sas/package.json
+++ b/papers/bilan-sas/package.json
@@ -7,5 +7,11 @@
     "pdf-lib": "^1.17.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
+  },
+  "scripts": {
+    "gen": "ts-node index.ts"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.2"
   }
 }
