--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '18'
-        cache: 'yarn'
+        cache: 'npm'
     
     - name: Change to website directory
       run: cd website
@@ -25,12 +25,12 @@ jobs:
     - name: Install dependencies
       run: |
         cd website
-        yarn install --frozen-lockfile
+        npm ci
     
     - name: Build Angular app
       run: |
         cd website
-        yarn build
+        npm run build
     
     - name: Prepare deployment files
       run: |
